--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,280 @@
-.App {
+body{
+	font-family: "Roboto", sans-serif;
+  background-color: black;
+  
+}
+
+/*Header*/
+
+.header-content {
+  display: flex;
+  align-items: center;
+}
+
+.left-column {
+  flex: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.right-column {
+  flex: 1;
+  text-align: center;
+  margin-right: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.name {
   color: white;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+  font-size: 70px;
+  font-family: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
-.App-link {
-  color: #61dafb;
+.desc {
+  font-size: 20px;
+  color: rgb(203, 240, 253);
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  width: 500px;
+  height: auto;
+  max-width: 100%;
+  
+}
+
+
+
+
+
+/* Navbar*/
+
+.navbar {
+  padding: 10px;
+  position: fixed;
+  font-family: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
+.mr-auto{
+  font-weight: bold;
+  font-size: 16px;
+  text-align: left;
+  margin-left: 10px;;
+}
+.ml-auto{
+  padding: 3px;
+  font-size: 16px;
+  text-align: right;
+  margin-left: 750px;
+  margin-right: 3px;
+}
+.brand{
+  margin-left: 7px;
+}
+
+
+.navbar-toggle {
+  border: none;
+  outline: none;
+  background-color: #000;
+ 
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.3rem;
+}
+.a1{
+  text-decoration: none;
+  color: white;
+  transition: color 0.2s ease-in-out;
+}
+.a1:hover{
+  color: rgb(36, 177, 228);
+  text-decoration: underline;
+}
+
+/*Content*/
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.column-left {
+  width: 50%;
+  font-family: Arial, sans-serif;
+  font-size: 12pt;
+}
+
+.column-right {
+  width: 50%;
+}
+
+
+.column-right p {
+  margin-bottom: 0;
+}
+
+.column-right button {
+  margin-top: 10px;
+}
+
+.btn{
+  background-color: rgb(36, 177, 228);
+}
+
+/*About*/
+.about-section {
+  padding: 130px ;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #f2f2f2;
+}
+
+.about-header {
+  display: flex;
+  align-items: center;
+}
+
+.about-header h1 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.about-header .fa-icon {
+  margin-right: 10px;
+}
+
+.about-content {
+  padding: 20px;
+  text-align: justify;
+}
+
+.about-call-to-action {
+  padding: 20px;
+}
+
+.about-call-to-action h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.about-call-to-action ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.about-call-to-action li {
+  margin-bottom: 10px;
+}
+
+
+
+/* Contact*/
+.contact {
+
+  padding: 2rem;
+  text-align: center;
+}
+
+.contact-content {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.contact h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: rgb(203, 240, 253);
+}
+
+.contact p {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: whitesmoke;
+  margin-bottom: 2rem;
+}
+
+.contact-form form {
+  text-align: left;
+}
+
+.form-group {
+  margin-bottom: 1.5rem;
+}
+
+.form-group label {
+  font-size: 1.2rem;
+  color: rgb(203, 240, 253);
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1rem;
+  color: #333;
+}
+
+.form-group textarea {
+  resize: vertical;
+}
+
+.contact-form button {
+  background-color: rgb(104, 207, 244);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+  background-color: #3380a0;
+}
+
+/*Footer*/
+
+.footer {
+
+  color: #fff;
+  padding: 1rem;
+  text-align: center;
+}
+
+.footer-content {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.footer p {
+  font-size: 1.2rem;
+}
+
+.react-icon {
+  vertical-align: middle;
+  margin: 0 0.25rem;
+  color: #61dafb; /* React blue */
+}
+
+.social-icons {
+  margin-top: 1rem;
+}
+
+.social-icon {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: #fff;
+  text-decoration: none;
+}
+
+.social-icon:hover {
+  color: #66b3e0; /* Change color on hover */
 }
